alerts-ui: Fix footer on mobile devices

--- a/alerts-ui/src/app/footer/footer.component.css
+++ b/alerts-ui/src/app/footer/footer.component.css
@@ -3,9 +3,17 @@
   position: absolute;
   bottom: 0;
   width: 100%;
-  padding: 35px 0;
+  padding: 2em 1em;
+  height: 150px;
+  background-color: #f5f5f5;
 }
 
 #main-footer p {
-  font-size: 20px;
+  font-size: 1.5em;
+}
+
+@media only screen and (max-width: 768px) {
+  #main-footer p {
+    font-size: 1.2em;
+  }
 }
